--- a/src/main/resources/assets/jumblejunk/lang/en_us.json
+++ b/src/main/resources/assets/jumblejunk/lang/en_us.json
@@ -2,6 +2,7 @@
     "item.jumblejunk.signalmeter": "Signal meter",
     "item.jumblejunk.fried_egg": "Fried egg",
     "item.jumblejunk.matchstick": "Matchstick",
+    "item.jumblejunk.life_star": "Life Star",
     "message.jumblejunk.weak_power": "Weak Power",
     "message.jumblejunk.strong_power": "Strong Power"
 }
